added heading tags and breaks

--- a/my_starter_site/practice.html
+++ b/my_starter_site/practice.html
@@ -3,7 +3,8 @@
     <title>Practice</title>
   </head>
   <body>
-    <p>Ryan Ramdehol </p>
-    <p>That's My Name</p>
+    <h1>Ryan Ramdehol</h1>
+    <h2>That's my Name</h2>
+    <p>Laurie is lost in Userland. She knows where she is, or where she's going, but maybe not at the same time. The only way out is through Jargon-infested swamps, gates guarded by perfect logic, and the perils of breakfast time at the Philosopher's Diner. With just her wits and the help of a lizard who thinks he's a dinosaur, Laurie has to find her own way home.<br><br>Then one day you get a call from the White House. They ask you to come to DC to talk with policymakers and other people like you from around the country. You have one week to prepare!</p>
   </body>
 </html>
