added css link and moved styles

--- a/my_starter_site/practice.html
+++ b/my_starter_site/practice.html
@@ -1,7 +1,12 @@
 <html>
   <head>
     <title>Practice</title>
-  </head>
+    <!-- The link tag has 3 equations 
+    1st one tells the browser that the information is with a style sheet.
+    2nd Useless
+    3rd Hypertext Reference or where to find the style sheet -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head> 
   <body>
     <h1>Ryan Ramdehol</h1>
     <h2>That's my Name</h2>
