added some new font and sizes

--- a/my_starter_site/practice.html
+++ b/my_starter_site/practice.html
@@ -1,11 +1,12 @@
-<html>
+<html lang="en">
   <head>
+  	<meta charset="utf-8" name="name" content="content">
     <title>Practice</title>
     <!-- The link tag has 3 equations 
     1st one tells the browser that the information is with a style sheet.
     2nd Useless
     3rd Hypertext Reference or where to find the style sheet -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head> 
   <body>
     <h1>Ryan Ramdehol</h1>
